--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,11 +76,12 @@ li {
 
 //main-container全局样式
 .app-main {
-    min-height: 100%
+    min-height: 100% ;
+    padding-top:50px;
 }
 
 .app-container {
-    padding: 20px;
+    padding: 20px 50px 20px 20px;
 }
 
 .filter-container {
@@ -90,4 +91,8 @@ li {
         vertical-align: middle;
         margin-bottom: 10px;
     }
+}
+img{
+    display: block;
+    width:100%;
 }
