--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,8 +76,8 @@ li {
 
 //main-container全局样式
 .app-main {
-    min-height: 100% ;
-    padding-top:50px;
+    min-height: 600px ;
+    padding-top:100px;
 }
 
 .app-container {
