--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -12,17 +12,18 @@
     height: 100%;
     position: fixed;
     font-size: 0px;
-    top:50px;
+    top:0;
     bottom: 0;
     left: 0;
-    z-index: 1001;
+    z-index:88;
     overflow: hidden;
+    padding-top: 50px;
     //reset element-ui css
     .horizontal-collapse-transition {
       transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
     }
     .scrollbar-wrapper {
-      height: calc(100% + 15px);
+      overflow-x: hidden!important;
       .el-scrollbar__view {
         height: 100%;
       }
