--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,13 +75,29 @@ li {
 }
 
 //main-container全局样式
+.main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 .app-main {
-    min-height: 600px ;
-    padding-top:100px;
+    // min-height: 450px;
+    flex: 1 0 auto;
 }
 
 .app-container {
-    padding: 20px 50px 20px 20px;
+    padding: 0 15px 15px;
+}
+
+.app-footer {
+    padding: 0;
+    flex: 0 0 auto;
+}
+
+.app-header {
+    -webkit-box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+    box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+    background: #fff;
 }
 
 .filter-container {
@@ -92,7 +108,16 @@ li {
         margin-bottom: 10px;
     }
 }
-img{
+
+img {
     display: block;
-    width:100%;
+    width: 100%;
+}
+
+.inlint {
+    display: inline-block;
+}
+.tipMessage{
+    font-size: 12px;
+    color: #666666
 }
