--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -108,7 +108,10 @@ li {
         margin-bottom: 10px;
     }
 }
-
+.pagination-container {
+    margin-top: 30px;
+    text-align: right
+  }
 img {
     display: block;
     width: 100%;
