--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,3 +124,11 @@ img {
     font-size: 12px;
     color: #666666
 }
+.link-type,
+.link-type:focus {
+  color: #337ab7;
+  cursor: pointer;
+  &:hover {
+    color: rgb(32, 160, 255);
+  }
+}
