--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -110,6 +110,10 @@ li {
     }
     .filter-main .el-row {
         margin-top: 15px;
+        label{
+            display: inline-block;
+            width: 100px;
+        }
     }
 }
 
@@ -126,7 +130,9 @@ img {
 .inlint {
     display: inline-block;
 }
-
+.edit-input {
+    width: 120px;
+  }
 .tipMessage {
     font-size: 12px;
     color: #666666
@@ -134,6 +140,22 @@ img {
 
 .link-type,
 .link-type:focus {
+    color: #337ab7;
+    cursor: pointer;
+    &:hover {
+        color: rgb(32, 160, 255);
+    }
+}
+
+// 三级页面
+.third-header{
+    margin-top: 10px;
+    margin-bottom:20px;
+    font-size: 18px;
+}
+.backPrev{
+    font-size: 20px;
+    margin-right:15px;
     color: #337ab7;
     cursor: pointer;
     &:hover {
